--- a/portfolio.html
+++ b/portfolio.html
@@ -71,10 +71,9 @@
                 </ul>
 
                 <ul class="portfolio-list">
-                    <li class="portfolio-cards-item"> </li>
+                    <li class="portfolio-cards-item"> 
                         <div class="portfolio-thumb">
                         <img src="./images/technokryak.jpg " alt="notebook pic" width="370" />
-                    </div>
                         <div class="portfolio-overlay">
                          <p class="portfolio-overlay-description">
                         Ресурс предлагает комплексные предложения с разным уровнем
@@ -83,65 +82,72 @@
                         лице.
                          </p>
                         </div>
+                        </div>
                         <div class="portfolio-container">
-                        <h3 class="portfolio-title">Технокряк</h3>
+                        <h2 class="portfolio-title">Технокряк</h2>
                         <p class="portfolio-text">Веб-сайт</p>
                         </div>
                     </div>
                     </li>
                     <li class="porfolio-item">
+                        <div class="portfolio-thumb">
                         <img src="./images/basketball.jpg" alt="poster pic" width="370" />
-                        <div class="portfolio-container">
-                        <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
+                        <div class="portfolio-overlay">
+                        <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                         <p class="portfolio-text">Дизайн</p>
                         </div>
-                    </li>
-                    <li class="porfolio-item">
-                        <img src="./images/fish.jpg" alt="Restaraunt pic" width="370" />
-                        <div class="portfolio-container">
-                        <h3 class="portfolio-title">Ресторан Seafood</h3>
-                        <p class="portfolio-text">Приложение</p>
                         </div>
                     </li>
                     <li class="porfolio-item">
+                        <div class="portfolio-thumb">
+                        <img src="./images/fish.jpg" alt="Restaraunt pic" width="370" />
+                        <div class="portfolio-overlay">
+                        <h2 class="portfolio-title">Ресторан Seafood </h2>
+                        <p class="portfolio-text">Приложение</p>
+                        </div>
+                        </div>
+                    </li>
+                    <li class="porfolio-item">
+                        <div class="portfolio-thumb">
                         <img src="./images/haedphone.jpg" alt="headphones pic" width="370" />
-                        <div class="portfolio-container">
-                        <h3 class="portfolio-title">Проект Prime</h3>
+                        <div class="portfolio-overlay">
+                        <h2 class="portfolio-title">Проект Prime</h2>
                         <p class="portfolio-text">Маркетинг</p>
+                        </div>
                         </div>
                     </li>
                     <li class="porfolio-item">
                         <img src="./images/book.jpg" alt="boxes pic" width="370" />
                         <div class="portfolio-container">
-                        <h3 class="portfolio-title">Проект Boxes</h3>
+                        <h2 class="portfolio-title">Проект Boxes</h2>
                         <p class="portfolio-text">Приложение</p>
                         </div>
                     </li>
                     <li class="porfolio-item">
                         <img src="./images/macpc.jpg" alt="monitor pic" width="370" />
                         <div class="portfolio-container">
-                        <h3 class="portfolio-title">Inspiration has no Borders</h3>
+                        <h2 class="portfolio-title">Inspiration has no Borders</h2>
                         <p class="portfolio-text">Веб-сайт</p>
                         </div>
                     </li>
                     <li class="porfolio-item">
                         <img src="./images/magazine.jpg" alt="book pic" width="370" />
                         <div class="portfolio-container">
-                        <h3 class="portfolio-title">Издание Limited Edition</h3>
+                        <h2 class="portfolio-title">Издание Limited Edition</h2>
                         <p class="portfolio-text">Дизайн</p>
                         </div>
                     </li>
                     <li class="porfolio-item">
                         <img src="./images/projectlab.jpg" alt="tag pic" width="370" />
                         <div class="portfolio-container">
-                        <h3 class="portfolio-title">Проект LAB</h3>
+                        <h2 class="portfolio-title">Проект LAB</h2>
                         <p class="portfolio-text">Маркетинг</p>
                         </div>
                     </li>
                     <li class="porfolio-item">
                         <img src="./images/notebook.jpg" alt="work on notebook" width="370" />
                         <div class="portfolio-container">
-                        <h3 class="portfolio-title">Growing Business</h3>
+                        <h2 class="portfolio-title">Growing Business</h2>
                         <p class="portfolio-text">Приложение</p>
                         </div>
                     </li>
